Release history for Dist-Zilla-App-Command-critic

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001004, see misc/*.deps* for details
 - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
 - runtime: (recommends: +1)
 - test: ↑1 -1 (recommends: ↓1)

 [Minor]
 - Moving app testing to dztest.

0.001004 2014-11-01T13:07:20Z 437dbe4
 [Bugfix]
 - Avoid test failures due to old versions of Test::More not doing subtest right ( via upgrade on the module that
   uses it )

 [Dependencies::Stats]
 - Dependencies changed since 0.001003, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: ↑1

0.001003 2014-10-30T23:33:56Z ce4d03b
 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +3 -1 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +1 (recommends: ↑2)

 [Internals]
 - Stop loading utf8 ( optimisation )
 - 5.006 is now minimum perl.

0.001002 2014-10-12T14:14:11Z 8fd643f
 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: ↓1 (recommends: ↑1)
 - develop: +8 ↑2 -3 (suggests: +2 -1)
 - test: +5 -3 (recommends: ↑3 -1)

 [Meta]
 - Move to KENTNL github org.
 - Author = kentnl@cpan

 [Packaging]
 - Packaging cleaned up a bit

 [Tests]
 - Basic behaviour tests added

0.001001 2014-04-13T01:46:56Z
 [Bugfix]
 - Include bin and script in all_perl_files search roots. I'm not sure how Test::Perl::Critic seems to do this.

0.001000 2014-04-12T23:42:06Z
 - First version.

 [Dependencies::Aggregate]
 - 5.008: 216
 - 5.010: 196
 - 5.019: 175
